fix: refactored contrast theme styling
moved selectors with curretColor value to mixins scss

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,20 +1,70 @@
 // Mixins.
 
 @mixin adapt-to-contrastThemes($fColor, $bColor) {
-	// Social media icons
-	footer .footer-content .social-media .social-media-icons a {
-		svg path {
-			fill: currentColor;
-			stroke: $bColor;
-		}
+	// WeCount logo
+	.logo circle,
+	.logo path {
+		fill: none;
+		stroke: var(--logo-stroke, currentColor);
+		stroke-linecap: round;
+		stroke-width: rem(3);
+	}
+	// Search icon; IDRC, OCADU and Canada logos
+	header .site-nav-wrapper .site-nav .search-container svg {
+		fill: currentColor;
+		height: rem(19.2);
+		margin: -rem(25.6);
+		width: rem(19.2);
+	}
 
-		&:hover,
-		&:focus {
+	// Canada logo
+	--theme-link-fill: currentColor;
+
+	// Placeholder images on the "views" page
+	svg.news-item-img use {
+		stroke: var(--placeholder-stroke, currentColor);
+		stroke-linecap: round;
+		stroke-width: rem(3);
+	}
+
+	footer .footer-content {
+		// fix overlap of box-shadow on footer links
+		.funders a,
+		.footer-logos a {
+			padding: rem(5);
+		}
+		// Social media icons
+		.social-media .social-media-icons a {
 			svg path {
-				fill: $bColor;
-				stroke: currentColor;
+				fill: currentColor;
+				stroke: $bColor;
+			}
+
+			&:hover,
+			&:focus {
+				svg path {
+					fill: $bColor;
+					stroke: currentColor;
+				}
 			}
 		}
+	}
+
+	// UIO focus style focus/hover styles for links in uio contrast themes
+	#defaultContainer a:focus,
+	#defaultContainer a:hover,
+	#defaultContainer header .site-nav-wrapper .site-nav nav a:focus,
+	#defaultContainer header .site-nav-wrapper .site-nav nav a:hover,
+	#defaultContainer .content-wrapper .tags-info .tags a:focus,
+	#defaultContainer .content-wrapper .tags-info .tags a:hover,
+	#search-form input,
+	.card:focus,
+	.card:hover,
+	button:focus,
+	button:hover,
+	li .pagination-link,
+	li .pagination-link::before {
+		box-shadow: inset 0 0 0 rem(2) currentColor;
 	}
 
 	// Current page pagination styling for uio contrast themes
